tetrate/tis804/e2e/bad-resouces.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: invalid-replace-operation
  namespace: default
spec:
  configPatches:
  - applyTo: ROUTE_CONFIGURATION
    match:
      context: GATEWAY
    patch:
      operation: REPLACE
      value:
        name: "route-config"
